syntax = "proto3";

message MqProtocolMessage {
  string msg_id = 1;
  int32 seq_id = 2;
  bytes message = 3;
  string sender_id = 4;
}
